--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -54,7 +54,8 @@
 
   <section class="jumbotron text-center">
     <div class="container" background-color: black>
-      <h1>A-30X</h1>
+      <img width="400" height="300" src="https://cdn.givingcompass.org/wp-content/uploads/2019/05/07123200/New-Project-in-Carbon-Farming-Launched-in-India.jpg" class="attachment-gc-large size-gc-large wp-post-image" alt="New Project in Carbon Farming Launched in India" srcset="https://cdn.givingcompass.org/wp-content/uploads/2019/05/07123200/New-Project-in-Carbon-Farming-Launched-in-India.jpg 700w, https://cdn.givingcompass.org/wp-content/uploads/2019/05/07123200/New-Project-in-Carbon-Farming-Launched-in-India-480x270.jpg 480w, https://cdn.givingcompass.org/wp-content/uploads/2019/05/07123200/New-Project-in-Carbon-Farming-Launched-in-India-232x131.jpg 232w, https://cdn.givingcompass.org/wp-content/uploads/2019/05/07123200/New-Project-in-Carbon-Farming-Launched-in-India-160x90.jpg 160w, https://cdn.givingcompass.org/wp-content/uploads/2019/05/07123200/New-Project-in-Carbon-Farming-Launched-in-India-240x135.jpg 240w, https://cdn.givingcompass.org/wp-content/uploads/2019/05/07123200/New-Project-in-Carbon-Farming-Launched-in-India-400x225.jpg 400w" sizes="(max-width: 700px) 100vw, 700px">
+      <h1>Farmway</h1>
       <p class="lead text-muted">We work extensively with farmers and ranchers, but our responsibilities – from ensuring food safety to environmental protection – touch the lives of millions of people locally, nationally, and abroad.
       </p>
       <a href="/about-wsda" class="btn btn-success" target="_self">Learn More </a>
@@ -69,8 +70,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src="https://cms.agr.wa.gov/wsdakentico/img/service-2.jpg" alt="WSDA Services" style="height: auto; object-position: center center;">            <div class="card-body">
-              <p class="card-text">We offer guidance, workshops, and technical assistance to support education for better compliance. Regulatory work includes registration, licensing, permits, inspection, investigation, and compliance support.</p>
+            <img alt="Image result for milk farms in india" class="n3VNCb" src="https://189662-567937-2-raikfcquaxqncofqfm.stackpathdns.com/wp-content/uploads/2015/02/israel_model.jpg" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 434px; height: 289.333px; margin: 0px;">              <p class="card-text">We offer guidance, workshops, and technical assistance to support education for better compliance. Regulatory work includes registration, licensing, permits, inspection, investigation, and compliance support.</p>
               <div class="d-flex justify-content-between align-items-center">
                
               </div>
@@ -80,7 +80,7 @@
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
             <img src="https://cms.agr.wa.gov/wsdakentico/img/regulatory-2.jpg" alt="WSDA Regulations" style="height: auto; object-position: center center;">            <div class="card-body">
-              <p class="card-text">We work to raise the profile of Washington's agricultural products and industry. Through policy, planning, partnerships, outreach, and promotion, we can be a voice, catalyst, and facilitator for a viable industry.</p>
+              <p class="card-text">We work to raise the profile of Kerala's agricultural products and industry. Through policy, planning, partnerships, outreach, and promotion, we can be a voice, catalyst, and facilitator for a viable industry.</p>
               <div class="d-flex justify-content-between align-items-center">
                 
               </div>
@@ -89,8 +89,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src="https://cms.agr.wa.gov/getmedia/715d52a4-6a90-4d1a-9f04-2e3a4ece01b0/advocacy-2?width=383&amp;height=257&amp;ext=.jpg" alt="WSDA Advocates" style="height: auto; object-position: center center;">              <div class="d-flex justify-content-between align-items-center">
-              <p class="card-text">Provides financial services, computer and information technology services, personnel services, administrative procedures guidance, legal services, and safety and emergency management programs for the department's 36 programs.</p>
+            <img alt="Image result for orange farms in india" class="n3VNCb" src="https://lh3.googleusercontent.com/proxy/x5zE45QWHytUbJnnvhN4v2Cna9nVsCPu6nCn8sn1kjJpZtsQVuUOrjWOtCq8fgoZ5_KQFBe8v67MP1c5AgECslw5v17tnFDxmWPEVuqggC4262CKjNSBix7UW6fBqSo" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 434px; height: 310.665px; margin: 0px;">              <p class="card-text">Provides financial services, computer and information technology services, personnel services, administrative procedures guidance, legal services, and safety and emergency management programs for the department's 36 programs.</p>
              <div class="d-flex justify-content-between align-items-center">
 
                 
