--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -70,8 +70,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img alt="Image result for milk farms in india" class="n3VNCb" src="https://189662-567937-2-raikfcquaxqncofqfm.stackpathdns.com/wp-content/uploads/2015/02/israel_model.jpg" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto; object-position: center center;">              <p class="card-text">We offer guidance, workshops, and technical assistance to support education for better compliance. Regulatory work includes registration, licensing, permits, inspection, investigation, and compliance support.</p>
-              <div class="d-flex justify-content-between align-items-center">
+            <img alt="Image result for vegetables" class="n3VNCb" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/shopping-bag-full-of-fresh-vegetables-and-fruits-royalty-free-image-1128687123-1564523576.jpg?crop=0.669xw:1.00xh;0.300xw,0&amp;resize=640:*" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto; object-position: center center;">              <div class="d-flex justify-content-between align-items-center">
                
               </div>
             </div>
