--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -70,8 +70,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img alt="Image result for vegetables" class="n3VNCb" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/shopping-bag-full-of-fresh-vegetables-and-fruits-royalty-free-image-1128687123-1564523576.jpg?crop=0.669xw:1.00xh;0.300xw,0&amp;resize=640:*" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto; object-position: center center;">              <div class="d-flex justify-content-between align-items-center">
-               
+            <img alt="Image result for vegetables" class="n3VNCb" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/12_powerhouse_vegetables_slideshow/intro_cream_of_crop.jpg" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto; object-position: left left;">               
               </div>
             </div>
           </div>
