--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -70,15 +70,15 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img alt="Image result for vegetables" class="n3VNCb" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/12_powerhouse_vegetables_slideshow/intro_cream_of_crop.jpg" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto; object-position: left left;">               
-              </div>
+            <img alt="Image result for vegetables" class="n3VNCb" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/12_powerhouse_vegetables_slideshow/intro_cream_of_crop.jpg" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto;">               
+            <div class="card-body">        <p class="card-text">We work to raise the profile of Kerala's agricultural products and industry. Through policy, planning, partnerships, outreach, and promotion, we can be a voice, catalyst, and facilitator for a viable industry.</p>
+          </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src="https://cms.agr.wa.gov/wsdakentico/img/regulatory-2.jpg" alt="WSDA Regulations" style="height: auto; object-position: center center;">            <div class="card-body">
-              <p class="card-text">We work to raise the profile of Kerala's agricultural products and industry. Through policy, planning, partnerships, outreach, and promotion, we can be a voice, catalyst, and facilitator for a viable industry.</p>
+            <img src="https://cms.agr.wa.gov/wsdakentico/img/regulatory-2.jpg" alt="WSDA Regulations" style="height: auto;">            <div class="card-body">        <p class="card-text">We work to raise the profile of Kerala's agricultural products and industry. Through policy, planning, partnerships, outreach, and promotion, we can be a voice, catalyst, and facilitator for a viable industry.</p>
               <div class="d-flex justify-content-between align-items-center">
                 
               </div>
@@ -87,10 +87,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img alt="Image result for orange farms in india" class="n3VNCb" src="https://lh3.googleusercontent.com/proxy/x5zE45QWHytUbJnnvhN4v2Cna9nVsCPu6nCn8sn1kjJpZtsQVuUOrjWOtCq8fgoZ5_KQFBe8v67MP1c5AgECslw5v17tnFDxmWPEVuqggC4262CKjNSBix7UW6fBqSo" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto; object-position: center center;">              <p class="card-text">Provides financial services, computer and information technology services, personnel services, administrative procedures guidance, legal services, and safety and emergency management programs for the department's 36 programs.</p>
-             <div class="d-flex justify-content-between align-items-center">
-
-                
+            <img alt="Image result for orange farms in india" class="n3VNCb" src="https://lh3.googleusercontent.com/proxy/x5zE45QWHytUbJnnvhN4v2Cna9nVsCPu6nCn8sn1kjJpZtsQVuUOrjWOtCq8fgoZ5_KQFBe8v67MP1c5AgECslw5v17tnFDxmWPEVuqggC4262CKjNSBix7UW6fBqSo" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="height: auto;">              <p class="card-text">Provides financial services, computer and information technology services, personnel services, administrative procedures guidance, legal services, and safety and emergency management programs for the department's 36 programs.</p>            <div class="d-flex justify-content-between align-items-center">               
               </div>
             </div>
           </div>
