--- a/templates/pages/qr.html
+++ b/templates/pages/qr.html
@@ -1,7 +1,7 @@
 <ol>
-    <li>{{data.name}}</li>
-    <li>{{data.address}}</li>
-    <li>{{data.age}}</li>   
-    <li>{{data.contact}}</li>    
-    <li>{{data.item}}</li>
+    <li>kennedy</li>
+    <li>Chengannur</li>
+    <li>20</li>   
+    <li>7440730613</li>    
+    <li>orange</li>
 </ol>
