--- a/templates/pages/farmer.html
+++ b/templates/pages/farmer.html
@@ -10,7 +10,7 @@
 <h1>Add Farmer</h1>
 <div class="container mt-4">
     {% if user.is_authenticated %}
-    <form method="post" action="{% url 'home' %}">
+    <form method="post" action="{% url 'add' %}">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary">Register</button>
