--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,7 +26,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         {% if user.is_authenticated %}
-        <a href="{% url 'add' %}" class="btn btn-primary ml-right" style="float:right">Add a Supplier!</a>
+        <a href="{% url 'add' %}" class="btn btn-primary ml-right" style="float:right">Add a Farmer!</a>
           <a class="navbar-link ml-auto" href="{% url 'viewfarmers' %}">View All Farmers</a>
             <ul class="navbar-nav ml-4">
               <li class="nav-item">
@@ -44,7 +44,7 @@
         {% else %}
           <form class="form-inline ml-auto">
             <a href="{% url 'account_login' %}" class="btn btn-outline-secondary" ><h4>Log in</h4></a>
-            <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2"><h4>Sign up!</h4></a>
+            <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2"><h4>Employee Sign up!</h4></a>
             
           </form>
         {% endif %}
